<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="nl.antonsteenvoorden.ikpmd.activity.WhoAreYouActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whoAreYouImage"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_only"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text"
            android:text="@string/who_are_you_title"
            android:id="@+id/whoAreYouTitle"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/who_are_you_subtitle"
            android:id="@+id/whoAreYouSubtitle"
            android:paddingBottom="25dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/who_are_you_question"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/whoAreYouInput"
            android:singleLine="true"
            android:textColor="@color/text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_are_you_button"
            android:id="@+id/whoAreYouButton"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
