<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.antonsteenvoorden.ikpmd.activity.WelcomeFirstStep"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:src="@drawable/hsl_logo"
        android:padding="25dp"
        android:background="@drawable/logo_container"
        android:layout_gravity="center"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome_title_step1"
        android:textColor="@color/white"
        android:paddingTop="18dp"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_step1"
        android:paddingTop="18dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <fragment
            android:name="nl.antonsteenvoorden.ikpmd.ui.WelcomeSliderFragment"
            android:id="@+id/welcome_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="25dp"
            android:layout_gravity="right" />

    </LinearLayout>

</LinearLayout>
